--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
                                     <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
                                         <ul>
                                             <li>
-                                                <a href="index.html" class="active">Главная</a></li>
+                                                <a href="index.html">Главная</a></li>
                                             <li>
                                             <li>
                                                 <a href="services.html"></i>Данные по годам</a>
@@ -148,7 +148,7 @@
                                             </ul> -->
                                             </li>
                                             <li><a href="project.html">Статистика</a></li>
-                                            <li><a href="about.html">О проекте</a></li>
+                                            <li><a href="about.html" class="active">О проекте</a></li>
                                             <li>
                                                 <a href="team.html">Исполнители</a>
                                             </li>
