--- a/services.html
+++ b/services.html
@@ -135,10 +135,10 @@
                                     <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
                                         <ul>
                                             <li>
-                                                <a href="index.html" class="active">Главная</a></li>
+                                                <a href="index.html">Главная</a></li>
                                             <li>
                                             <li>
-                                                <a href="services.html"></i>Данные по годам</a>
+                                                <a href="services.html" class="active"></i>Данные по годам</a>
                                             </li>
                                             <!-- <a href="#">Данные</a> -->
                                             <!-- <ul class="sub-menu">
