--- a/team.html
+++ b/team.html
@@ -133,7 +133,7 @@
 																	<div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
 																			<ul>
 																					<li>
-																							<a href="index.html" class="active">Главная</a></li>
+																							<a href="index.html">Главная</a></li>
 																					<li>
 																						<li>
 																							<a href="services.html"></i>Данные по годам</a>
@@ -150,7 +150,7 @@
 																					<li><a href="project.html">Статистика</a></li>
 																					<li><a href="about.html">О проекте</a></li>
 																					<li>
-																							<a href="team.html">Исполнители</a>
+																							<a href="team.html" class="active">Исполнители</a>
 																					</li>
 																			</ul>
 																			<div class="menu-right-option pull-right">
